# rustcraft

./: Cargo.toml
src/: login.rs  main.rs  packets.rs  server_list.rs
src/packets/: mod.rs
