[package]
name = "rustcraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mc-varint = "0.1.1"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
rsa = "0.5"
rand = "0.8"
reqwest = {version = "0.11.9", features = ["blocking"]}
num-bigint = "0.4.3"
sha1 = "0.10.1"
digest = "0.10.3"
uuid = "0.8.2"